--- a/lib/libutil/ftime.3
+++ b/lib/libutil/ftime.3
@@ -27,14 +27,14 @@
 .\"
 .\"     @(#)ftime.3	8.1 (Berkeley) 6/4/93
 .\"
-.Dd August 4, 2018
+.Dd May 28, 2024
 .Dt FTIME 3
 .Os
 .Sh NAME
 .Nm ftime
 .Nd get date and time
 .Sh LIBRARY
-.Lb libcompat
+.Lb libuitl
 .Sh SYNOPSIS
 .In sys/types.h
 .In sys/timeb.h
