--- a/usr.sbin/bluetooth/ath3kfw/ath3kfw.8
+++ b/usr.sbin/bluetooth/ath3kfw/ath3kfw.8
@@ -23,12 +23,12 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd June 4, 2016
+.Dd May 31, 2024
 .Dt ATH3KFW 8
 .Os
 .Sh NAME
 .Nm ath3kfw
-.Nd firmware download utility for Atheros AR3011/AR3012 chip based Bluetooth USB devices
+.Nd download firmware for Atheros AR3011/AR3012 Bluetooth USB devices
 .Sh SYNOPSIS
 .Nm
 .Fl d Ar device_name
