--- a/usr.sbin/bluetooth/bcmfw/bcmfw.8
+++ b/usr.sbin/bluetooth/bcmfw/bcmfw.8
@@ -25,14 +25,12 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $Id: bcmfw.8,v 1.7 2003/05/21 00:33:40 max Exp $
-.\"
-.Dd March 31, 2003
+.Dd May 31, 2024
 .Dt BCMFW 8
 .Os
 .Sh NAME
 .Nm bcmfw
-.Nd firmware download utility for Broadcom BCM2033 chip based Bluetooth USB devices
+.Nd download firmware for Broadcom BCM2033 Bluetooth USB devices
 .Sh SYNOPSIS
 .Nm
 .Op Fl h
