--- a/usr.sbin/bluetooth/bcmfw/bcmfw.8
+++ b/usr.sbin/bluetooth/bcmfw/bcmfw.8
@@ -1,3 +1,6 @@
+.\"-
+.\" SPDX-License-Identifier: BSD-2-Clause
+.\"
 .\" Copyright (c) 2003 Maksim Yevmenkin <m_evmenkin@yahoo.com>
 .\" All rights reserved.
 .\"
@@ -64,7 +67,7 @@ I am using the following files from the bluez-firmware-1.0 package:
 .Dl "MD5 (BCM2033-FW.bin) = b4e142b3272cfe5a84b32fda6b4b032f"
 .Pp
 The options are as follows:
-.Bl -tag -width indent
+.Bl -tag -width "-m mini-driver_file_name"
 .It Fl f Ar firmware_file_name
 Specify firmware file name for download.
 .It Fl h
@@ -75,7 +78,7 @@ Specify mini-driver file name for download.
 Specify device name.
 .El
 .Sh FILES
-.Bl -tag -width ".Pa /dev/ubtbcmfw Ns Ar N Ns Pa \&. Ns Ar EE" -compact
+.Bl -tag -width "-m mini-driver_file_name" -compact
 .It Pa BCM2033-MD.hex
 Mini-driver image.
 .It Pa BCM2033-FW.bin
