mitigations.7: Document riscv's SM[AE]P equivalents
Its base privileged architecture provides these. Read/write is
toggleable via the SUM bit, so use that as its feature name. Execute is
always-on so has no name.

--- a/share/man/man7/mitigations.7
+++ b/share/man/man7/mitigations.7
@@ -250,6 +250,8 @@ kernel.
 .It amd64       Ta SMEP  Ta Execute
 .It arm64       Ta PAN   Ta Read / Write
 .It arm64       Ta PXN   Ta Execute
+.It riscv       Ta SUM   Ta Read / Write
+.It riscv       Ta -     Ta Execute
 .El
 .Pp
 These features are automatically used by the kernel.
