mitigations.7: uncomment reference to recently added section
A brief description of supervisor mode memory access protection was
added in 72ece341b427.  Uncomment the existing reference to this section
in the table of contents.

Fixes: 72ece341b427 ("mitigations.7: mention supervisor mode memory...")
Sponsored by:	The FreeBSD Foundation

--- a/share/man/man7/mitigations.7
+++ b/share/man/man7/mitigations.7
@@ -56,8 +56,8 @@ Relocation Read-Only (RELRO)
 Bind Now
 .\".It
 .\"Stack Smashing Protection (SSP)
-.\".It
-.\"Supervisor Mode Memory Protection
+.It
+Supervisor Mode Memory Protection
 .It
 Hardware Vulnerability Mitigation Controls
 .It
