build.7: +freebsd to description, link development
Reviewed by:	mhorne
MFC after:	3 days
Pull Request:	https://github.com/freebsd/freebsd-src/pull/1273

(cherry picked from commit a8a2d5ef126f9ed866f2524a4fe012ba831add2f)

--- a/share/man/man7/build.7
+++ b/share/man/man7/build.7
@@ -30,7 +30,9 @@
 .Os
 .Sh NAME
 .Nm build
-.Nd General instructions on how to build the system
+.Nd general instructions on how to build the
+.Fx
+system
 .Sh DESCRIPTION
 The sources for the
 .Fx
@@ -901,6 +903,7 @@ make TARGET_ARCH=armv6 DESTDIR=/clients/arm installworld installkernel
 .Xr make.conf 5 ,
 .Xr src.conf 5 ,
 .Xr arch 7 ,
+.Xr development 7 ,
 .Xr pkg 7 ,
 .Xr ports 7 ,
 .Xr release 7 ,
