development.7/FILES: add CONTRIBUTING and git-arc
MFC after: 3 days

--- a/share/man/man7/development.7
+++ b/share/man/man7/development.7
@@ -119,6 +119,14 @@ build and test status of CURRENT and STABLE branches,
 the continuous integration system is at:
 .Pp
 .Lk https://ci.FreeBSD.org
+.Sh FILES
+.Bl -tag -width "src/tools/tools/git/HOWTO" -compact
+.It Pa src/CONTRIBUTING.md
+.Fx
+contribution guidelines
+.It Pa src/tools/tools/git/HOWTO
+Introduction to review submission tooling
+.El
 .Sh EXAMPLES
 Check out the CURRENT branch, build it, and install, overwriting the current
 system:
