--- a/THANKS
+++ b/THANKS
@@ -46,6 +46,7 @@ has been important. :-) In alphabetical order:
   - Vincent Fazio
   - Michael Felt
   - Michael Fox
+  - Andres Freund
   - Mike Frysinger
   - Daniel Richard G.
   - Tomasz Gajc
@@ -76,6 +77,7 @@ has been important. :-) In alphabetical order:
   - Richard Koch
   - Anton Kochkov
   - Ville Koskinen
+  - Sergey Kosukhin
   - Marcin Kowalczyk
   - Jan Kratochvil
   - Christian Kujau
@@ -150,11 +152,10 @@ has been important. :-) In alphabetical order:
   - Martin Storsjö
   - Jonathan Stott
   - Dan Stromberg
-  - Jia Tan
   - Vincent Torri
+  - Alexey Tourbin
   - Paul Townsend
   - Mohammed Adnène Trojette
-  - Alexey Tourbin
   - Taiki Tsunekawa
   - Maksym Vatsyk
   - Loganaden Velvindron
@@ -171,6 +172,7 @@ has been important. :-) In alphabetical order:
   - Charles Wilson
   - Lars Wirzenius
   - Pilorz Wojciech
+  - Chien Wong
   - Ryan Young
   - Andreas Zieringer
 
