Fix a typo in manual page.

--- a/usr.bin/ktrace/ktrace.1
+++ b/usr.bin/ktrace/ktrace.1
@@ -48,7 +48,7 @@ The
 utility enables kernel trace logging for the specified processes.
 Kernel trace data is logged to the file
 .Pa ktrace.out .
-The kernel operations that are traced include system calls, namei
+The kernel operations that are traced include system calls, name
 translations, signal processing, and
 .Tn I/O .
 .Pp
