--- a/lib/libutil/fparseln.3
+++ b/lib/libutil/fparseln.3
@@ -1,4 +1,4 @@
-.\"	$NetBSD: fparseln.3,v 1.7 1999/07/02 15:49:12 simonb Exp $
+.\"	$NetBSD: fparseln.3,v 1.8 2001/08/20 12:00:49 wiz Exp $
 .\"
 .\" Copyright (c) 1997 Christos Zoulas.  All rights reserved.
 .\"
