--- a/usr.bin/diff/diff.1
+++ b/usr.bin/diff/diff.1
@@ -29,7 +29,7 @@
 .\"
 .\"     @(#)diff.1	8.1 (Berkeley) 6/30/93
 .\"
-.Dd February 26, 2024
+.Dd June 29, 2024
 .Dt DIFF 1
 .Os
 .Sh NAME
@@ -53,6 +53,7 @@
 .Op Fl -ignore-space-change
 .Op Fl -initial-tab
 .Op Fl -minimal
+.Op Fl -no-dereference
 .Op Fl -no-ignore-file-name-case
 .Op Fl -normal
 .Op Fl -rcs
@@ -83,6 +84,7 @@
 .Op Fl -ignore-space-change
 .Op Fl -initial-tab
 .Op Fl -minimal
+.Op Fl -no-dereference
 .Op Fl -no-ignore-file-name-case
 .Op Fl -normal
 .Op Fl -paginate
@@ -109,6 +111,7 @@
 .Op Fl -ignore-space-change
 .Op Fl -initial-tab
 .Op Fl -minimal
+.Op Fl -no-dereference
 .Op Fl -no-ignore-file-name-case
 .Op Fl -normal
 .Op Fl -paginate
@@ -137,6 +140,7 @@
 .Op Fl -ignore-space-change
 .Op Fl -initial-tab
 .Op Fl -minimal
+.Op Fl -no-dereference
 .Op Fl -no-ignore-file-name-case
 .Op Fl -normal
 .Op Fl -paginate
@@ -168,6 +172,7 @@
 .Op Fl -initial-tab
 .Op Fl -minimal
 .Op Fl -new-file
+.Op Fl -no-dereference
 .Op Fl -no-ignore-file-name-case
 .Op Fl -normal
 .Op Fl -paginate
@@ -198,6 +203,7 @@
 .Op Fl -ignore-blank-lines
 .Op Fl -ignore-case
 .Op Fl -minimal
+.Op Fl -no-dereference
 .Op Fl -no-ignore-file-name-case
 .Op Fl -strip-trailing-cr
 .Op Fl -suppress-common-lines
@@ -450,6 +456,8 @@ lines from FILE2
 .El
 .It Fl -ignore-file-name-case
 ignore case when comparing file names
+.It Fl -no-dereference
+do not follow symbolic links
 .It Fl -no-ignore-file-name-case
 do not ignore case wen comparing file names (default)
 .It Fl -normal
