--- a/bin/freebsd-version/freebsd-version.1
+++ b/bin/freebsd-version/freebsd-version.1
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd October 1, 2021
+.Dd July 6, 2024
 .Dt FREEBSD-VERSION 1
 .Os
 .Sh NAME
@@ -37,7 +37,7 @@
 The
 .Nm
 utility makes a best effort to determine the version and patch level
-of the installed kernel and / or userland.
+of the kernel and / or userland.
 .Pp
 The following options are available:
 .Bl -tag -width Fl
