freebsd-version.1: neatness

--- a/bin/freebsd-version/freebsd-version.1
+++ b/bin/freebsd-version/freebsd-version.1
@@ -40,6 +40,7 @@ utility makes a best effort to determine the version and patch level
 of the kernel and / or userland.
 .Pp
 .Ss Options
+.Pp
 .Bl -tag -width Fl
 .It Fl k
 Print the version and patch level of the installed kernel.
@@ -66,7 +67,7 @@ or
 This option can be specified multiple times.
 .El
 .Pp
-If multiple options are specified, lines will be printed in a preset
+If multiple options are specified, information will be in a preset
 order (regardless of user-specified order):
 .Pp
 .Bl -dash -compact
