freebsd-version.1: see also freebsd-update(8)

--- a/bin/freebsd-version/freebsd-version.1
+++ b/bin/freebsd-version/freebsd-version.1
@@ -127,6 +127,7 @@ env ROOT=/mnt /mnt/bin/freebsd-version -ku
 .Ed
 .Sh SEE ALSO
 .Xr uname 1 ,
+.Xr freebsd-update 8 ,
 .Xr loader.conf 5
 .Sh HISTORY
 The
