freebsd-version.1: improve the first example
Consistency: describe userland as installed (not currently running).

Omit the path to the freebsd-version binary.

Omit option -u, to help demonstrate that the utility behaves as if this option is specified when no option is specified.

--- a/bin/freebsd-version/freebsd-version.1
+++ b/bin/freebsd-version/freebsd-version.1
@@ -115,9 +115,9 @@ Path to the root of the filesystem in which to look for
 and the kernel.
 .El
 .Sh EXAMPLES
-To determine the version of the currently running userland:
+To determine the version of the installed userland:
 .Bd -literal -offset indent
-/bin/freebsd-version -u
+freebsd-version
 .Ed
 .Pp
 To inspect a system being repaired using a live system:
