freebsd-version.1: refine the first example
Where version but not patch level is mentioned, rewrite this short sentence.

--- a/bin/freebsd-version/freebsd-version.1
+++ b/bin/freebsd-version/freebsd-version.1
@@ -114,7 +114,8 @@ Path to the root of the filesystem in which to look for
 and the kernel.
 .El
 .Sh EXAMPLES
-To determine the version of the installed userland:
+Show userland information alone, without specifying option
+.It Fl u :
 .Bd -literal -offset indent
 freebsd-version
 .Ed
