--- a/share/man/man7/arch.7
+++ b/share/man/man7/arch.7
@@ -24,7 +24,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd June 19, 2024
+.Dd July 13, 2024
 .Dt ARCH 7
 .Os
 .Sh NAME
@@ -161,12 +161,11 @@ Examples are:
 .Pp
 .Dv aarch64
 will support execution of
-.Dv armv6
-or
 .Dv armv7
 binaries if the CPU implements
 .Dv AArch32
-execution state, however older arm binaries aren't supported.
+execution state, however older arm binaries are not supported by
+.Fx .
 .Pp
 On all supported architectures:
 .Bl -column -offset -indent "long long" "Size"
@@ -374,15 +373,19 @@ It, along with
 defines the ABI used by the system.
 Generally, the plain CPU name specifies the most common (or at least
 first) variant of the CPU.
-This is why powerpc and powerpc64 imply 'big endian' while 'armv6' and 'armv7'
+This is why powerpc and powerpc64 imply 'big endian' while armv7 and aarch64
 imply little endian.
 If we ever were to support the so-called x32 ABI (using 32-bit
 pointers on the amd64 architecture), it would most likely be encoded
 as amd64-x32.
-It is unfortunate that amd64 specifies the 64-bit evolution of the x86
-platform (it matches the 'first rule') as everybody else uses x86_64.
-There is no standard name for the processor: each OS selects its own
-conventions.
+It is unfortunate that amd64 specifies the 64-bit evolution of the x86 platform
+(it matches the 'first rule') as almost everybody else uses x86_64.
+The
+.Fx
+port was so early, it predated processor name standardization after Intel joined
+the market.
+At the time, each OS selected its own conventions.
+Backwards compatibility means it is not easy to change to the consensus name.
 .It Dv MACHINE_CPUARCH
 Represents the source location for a given
 .Dv MACHINE_ARCH .
