splash(4): fix markup around cross-references
Fixes: 7504e0e3e517 ("splash(4): Document how to use splash screen ...")
Sponsored by: The FreeBSD Foundation

--- a/share/man/man4/splash.4
+++ b/share/man/man4/splash.4
@@ -204,8 +204,8 @@ have the following line in the kernel configuration file.
 .Dl device splash
 .Pp
 Next for
-.Xr syscons 4
-, edit
+.Xr syscons 4 ,
+edit
 .Pa /boot/loader.conf
 (see
 .Xr loader.conf 5 )
@@ -244,8 +244,8 @@ bitmap_name="/boot/splash.bin"
 .Ed
 .Pp
 For
-.Xr vt 4
-, edit
+.Xr vt 4 ,
+edit
 .Pa /boot/loader.conf
 (see
 .Xr loader.conf 5 )
