--- a/share/man/man4/tcp.4
+++ b/share/man/man4/tcp.4
@@ -33,7 +33,7 @@
 .\"
 .\"     From: @(#)tcp.4	8.1 (Berkeley) 6/5/93
 .\"
-.Dd November 17, 2023
+.Dd July 21, 2024
 .Dt TCP 4
 .Os
 .Sh NAME
@@ -707,6 +707,9 @@ Use criteria defined in RFC793 instead of RFC5961 for accepting RST segments.
 Default is false.
 .It Va insecure_syn
 Use criteria defined in RFC793 instead of RFC5961 for accepting SYN segments.
+Default is false.
+.It Va insecure_ack
+Use criteria defined in RFC793 for validating SEG.ACK.
 Default is false.
 .It Va isn_reseed_interval
 The interval (in seconds) specifying how often the secret data used in
