--- a/share/man/man9/contigmalloc.9
+++ b/share/man/man9/contigmalloc.9
@@ -23,11 +23,11 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd July 22, 2024
+.Dd July 26, 2024
 .Dt CONTIGMALLOC 9
 .Os
 .Sh NAME
-.Nm contigmalloc , contigfree
+.Nm contigmalloc
 .Nd manage contiguous kernel physical memory
 .Sh SYNOPSIS
 .In sys/types.h
@@ -41,12 +41,6 @@
 .Fa "vm_paddr_t high"
 .Fa "unsigned long alignment"
 .Fa "vm_paddr_t boundary"
-.Fc
-.Ft void
-.Fo contigfree
-.Fa "void *addr"
-.Fa "unsigned long size"
-.Fa "struct malloc_type *type"
 .Fc
 .In sys/param.h
 .In sys/domainset.h
@@ -109,17 +103,10 @@ Other flags (if present) are ignored.
 .Pp
 The
 .Fn contigfree
-function deallocates memory allocated by a previous call to
-.Fn contigmalloc
-or
-.Fn contigmalloc_domainset .
-Its use is deprecated in favor of
-.Xr free 9
-which no longer requires the caller to know the
-.Fa size
-and also accepts
-.Dv NULL
-as an address.
+function is deprecated.
+Use
+.Xr free(9)
+instead.
 .Sh IMPLEMENTATION NOTES
 The
 .Fn contigmalloc
@@ -130,12 +117,6 @@ However, unless
 is specified, it may select a page for reclamation that must first be
 written to backing storage, causing it to sleep.
 .Pp
-The
-.Fn contigfree
-function does not accept
-.Dv NULL
-as an address input, unlike
-.Xr free 9 .
 .Sh RETURN VALUES
 The
 .Fn contigmalloc
