rtld(1): Spell value as VALUE, not NAME
Sponsored by:	The FreeBSD Foundation
MFC after:	1 week

--- a/libexec/rtld-elf/rtld.1
+++ b/libexec/rtld-elf/rtld.1
@@ -352,7 +352,7 @@ The syntax of the direct invocation is
 .Op Fl b Ar exe
 .Op Fl d
 .Op Fl f Ar fd
-.Op Fl o Ar OPT=NAME
+.Op Fl o Ar OPT=VALUE
 .Op Fl p
 .Op Fl u
 .Op Fl v
