exit(3): clarify how to obtain full exit status of the exited process
(cherry picked from commit c4269e63ecf301306a6176b9fe9002c4c2265695)

--- a/lib/libc/stdlib/exit.3
+++ b/lib/libc/stdlib/exit.3
@@ -103,6 +103,20 @@ values described in
 .Xr sysexits 3
 may be used to provide more information to the parent process.
 .Pp
+The complete
+.Fa status
+value is avaliable as
+.Va si_status
+member of the
+.Vt siginfo_t
+structure, to the
+.Xr wait6 2
+and
+.Xr sigwaitinfo 2
+callers, and
+.Va SIGCHLD
+signal handlers.
+.Pp
 Calls to the
 .Fn exit
 function are serialized.
