nvmfd: Stop setting MAXR2T in association parameters
This is only used for the host side of an association.  The controller
obtains this value from the host during connection negotiation.

Sponsored by:	Chelsio Communications

--- a/usr.sbin/nvmfd/nvmfd.8
+++ b/usr.sbin/nvmfd/nvmfd.8
@@ -3,7 +3,7 @@
 .\"
 .\" Copyright (c) 2024 Chelsio Communications, Inc.
 .\"
-.Dd May 2, 2024
+.Dd July 25, 2024
 .Dt NVMFD 8
 .Os
 .Sh NAME
@@ -120,7 +120,6 @@ The discovery controller and kernel mode functionality of
 should be merged into
 .Xr ctld 8 .
 .Pp
-Additional paramters such as
-.Va MAXR2T ,
-.Va MAXH2CDATA ,
+Additional parameters such as
+.Va MAXH2CDATA
 and queue sizes should be configurable.
