diff: Fix usage message and documentation.
The `--ignore-all-space` option was incorrectly documented as
`--ignore-all-blanks` in some (but not all) places.

MFC after:	3 days
PR:		280434
Sponsored by:	Klara, Inc.
Reviewed by:	0mp, markj
Differential Revision:	https://reviews.freebsd.org/D46160

(cherry picked from commit ab830de9f58c1b257e42b4fbdd46b3ca6a837ee6)

--- a/usr.bin/diff/diff.1
+++ b/usr.bin/diff/diff.1
@@ -29,7 +29,7 @@
 .\"
 .\"     @(#)diff.1	8.1 (Berkeley) 6/30/93
 .\"
-.Dd June 19, 2020
+.Dd July 26, 2024
 .Dt DIFF 1
 .Os
 .Sh NAME
@@ -184,7 +184,7 @@
 .Nm diff
 .Op Fl aBbditwW
 .Op Fl -expand-tabs
-.Op Fl -ignore-all-blanks
+.Op Fl -ignore-all-space
 .Op Fl -ignore-blank-lines
 .Op Fl -ignore-case
 .Op Fl -minimal
@@ -380,7 +380,7 @@ output adds character(s) to the front of each line which may screw up
 the indentation of the original source lines and make the output listing
 difficult to interpret.
 This option will preserve the original source's indentation.
-.It Fl w -ignore-all-blanks
+.It Fl w -ignore-all-space
 Is similar to
 .Fl b -ignore-space-change
 but causes whitespace (blanks and tabs) to be totally ignored.
