--- a/share/man/man4/filemon.4
+++ b/share/man/man4/filemon.4
@@ -29,13 +29,15 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd February 1, 2022
+.Dd July 30, 2024
 .Dt FILEMON 4
 .Os
 .Sh NAME
 .Nm filemon
 .Nd the filemon device
 .Sh SYNOPSIS
+.Cd device filemon
+.Pp
 .In dev/filemon/filemon.h
 .Sh DESCRIPTION
 The
