proccontrol: make -s require a target
Require a command to exec or a pid to target and update usage and the
manpage to make this more clear.

It makes no sense to invoke a procctl(2) command on the current process
only to exit.  Users are sometimes confused about how proccontrol works
and think it effects their shell environment when invoked without a
target.  Disallowing this nonsensical behavior and clarifiying usage
will hopefully reduce confusion.

Reviewed by:	kib
Differential Revision:	https://reviews.freebsd.org/D46422

--- a/usr.bin/proccontrol/proccontrol.1
+++ b/usr.bin/proccontrol/proccontrol.1
@@ -34,9 +34,12 @@
 .Sh SYNOPSIS
 .Nm
 .Fl m Ar mode
-.Op Fl s Ar control
-.Op Fl q
+.Fl s Ar control
 .Fl p Ar pid | command
+.Nm
+.Fl m Ar mode
+.Fl q
+.Op Fl p Ar pid | command
 .Sh DESCRIPTION
 The
 .Nm
