--- a/lib/libsys/open.2
+++ b/lib/libsys/open.2
@@ -25,7 +25,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd January 29, 2024
+.Dd August 25, 2024
 .Dt OPEN 2
 .Os
 .Sh NAME
@@ -580,6 +580,12 @@ and
 .Dv O_EXEC
 or
 .Dv O_SEARCH .
+.It Bq Er EINVAL
+.Dv O_CREAT
+is specified,
+and the last component of the
+.Fa path
+argument is invalid on the file system on which the file is being created.
 .It Bq Er EBADF
 The
 .Fa path
