--- a/usr.bin/tcopy/tcopy.1
+++ b/usr.bin/tcopy/tcopy.1
@@ -98,7 +98,7 @@ command appeared in
 .Bl -item
 .It
 Modern tape drives may return a SCSI "Incorrect Length Indicator (ILI)"
-for reach read with a different block size that what is on the
+for each read with a different block size that what is on the
 tape, and that slows things down a lot.
 This can be disabled with the
 .Xr mt 1
