intro.5: Import description table from OpenBSD
Looking around at how everyone else is doing it, this list seems nearly
perfect to me and we should just import it from them. I have added "and
streams" because we have some explanations of those in this section too.

PR:		248562
MFC after:	3 days
Obtained from:	OpenBSD
Approved by:	mhorne (mentor)
Reviewed by:	imp, mhorne, Lexi Winter <lexi@le-fay.org>
Pull Request:	https://github.com/freebsd/freebsd-src/pull/1534

--- a/share/man/man5/intro.5
+++ b/share/man/man5/intro.5
@@ -35,7 +35,16 @@
 .Nm intro
 .Nd introduction to file formats
 .Sh DESCRIPTION
-This section contains information about file formats.
+This section contains information about file formats, including:
+.Pp
+.Bl -bullet -compact
+.It
+ASCII configuration and resource files
+.It
+System binary file and stream structures
+.It
+Composition of database files
+.El
 .Sh FILES
 .Bl -tag -width "/usr/local/etc/" -compact
 .It Pa /etc/
